Response entity, Custom validation